travel-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-app-deployment
spec:
  selector:
    matchLabels:
      app: travel-app
  template:
    metadata:
      labels:
        app: travel-app
    spec:
      affinity:
        podAntiAffinity:
          # Soft Rule 적용: 파드를 서로 다른 호스트 노드에 분산 배치하도록 유도
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - travel-app
              topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: my-docker-key
      volumes:
      # - name: config # ConfigMap 연결
      #   configMap:
      #     name: fluent-bit-config  
      - name: image-storage-volume
        persistentVolumeClaim:
          claimName: travel-image-efs-pvc
      # - name: log-storage-volume
      #   emptyDir: {}                # 로그용 무료 임시 저장소

      containers:
      # - name: fluent-bit
      #   image: fluent/fluent-bit:latest
      #   resources:
      #     requests:
      #       memory: "128Mi"
      #       cpu: "50m"
      #     limits:
      #       memory: "128Mi"
      #       cpu: "50m"
      #   volumeMounts:
      #   - name: log-storage-volume # 앱과 같은 로그 폴더를 공유
      #     mountPath: /app/logs
      #   - name: config
      #     mountPath: /fluent-bit/etc/fluent-bit.conf
      #     subPath: fluent-bit.conf

      - name: travel-app
        image: dmlguyq1537/travel-app:v9
        ports:
        - containerPort: 8090
        resources:
          requests:
            memory: "700Mi" # 평소 쓰는 양
            cpu: "200m"
          limits:
            memory: "900Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /  # 스프링 부트 상태 체크 경로
            port: 8090
          initialDelaySeconds: 90    # JVM 초기 구동 시간을 고려하여 트래픽 유입 지연
          periodSeconds: 10          # 10초마다 한 번씩 상태를 확인
          successThreshold: 1        # 1번만 성공하면 '준비 완료'로 인정
          failureThreshold: 3        # 3번 연속 실패하면 '준비 안 됨'으로 간주
        volumeMounts:
        - name: image-storage-volume
          mountPath: /app/upload/images # 상품 이미지 저장 경로 (EFS)
        # - name: log-storage-volume
        #   mountPath: /app/logs          # 서비스 로그 저장 경로 (무료 공간)  
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: travel-app-service
# spec:
#   type: NodePort
#   ports:
#     - port: 80
#       targetPort: 8090
#       nodePort: 31689
#   selector:
#     app: travel-app
