nodeport-services.yaml
# 1. Grafana 서비스 설정
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000   # Grafana 컨테이너 내부 포트
    nodePort: 32000    # 브라우저 접속용 포트 (EC2-IP:32000)
  selector:
    app.kubernetes.io/name: grafana
