ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-ingress
  ingressClassName: nginx
spec:
  rules:
  - host: travel-app-lb-339761593.ap-northeast-2.elb.amazonaws.com  #  CLB 도메인 주소 입력
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: travel-app-service  # 실제 서비스 이름과 일치해야 함
            port:
              number: 80
